kmp-rst-lp21/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kmp-rst-lp21-service
spec:
  selector:
    app: kmp-rst-lp21
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
